show project name

--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="span9">
-        <h3>Project {{projectId}}</h3>
+        <h3>Project "{{projects[projectId].name}}"</h3>
         <ul class="nav nav-tabs">
           <li ng:class="getTabClass('details')">
             <a ng-click="tab='details'" href="#">Details</a></li>
