add "Fork me on github"

--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -87,5 +87,7 @@
         </div>
       </div>
     </div>
+
+    <div id="github"><a title="Fork me on GitHub" href="https://github.com/greenelephantlabs/kha">Fork me on GitHub</a></div>
   </body>
 </html>
