--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -20,7 +20,7 @@
             <h2>Projects</h2>
             <ul class="nav nav-tabs nav-stacked">
               <li ng:class="getProjectClass(project)" ng-repeat="project in projects">
-                <a ng-click="setCurrentProject(project)">
+                <a href="#/project/{{project.id}}/builds">
                   <span>{{project.id}}</span> -
                   <span>{{project.name}}</span>
                 </a>
@@ -33,13 +33,12 @@
           <h3>Project "{{currentProject.name}}"</h3>
           <ul class="nav nav-tabs">
             <li ng:class="getTabClass('details')">
-              <a ng-click="selectTab('details')" href="#">Details</a></li>
+              <a ng-click="selectTab('details')" href="#/project/{{currentProject.id}}/details">Details</a></li>
             <li ng:class="getTabClass('builds')">
-              <a ng-click="selectTab('builds')" href="#">Builds</a></li>
-            <li ng:class="getTabClass('build-details')"
+              <a ng-click="selectTab('builds')" href="#/project/{{currentProject.id}}/builds">Builds</a></li>
+            <li ng:class="getTabClass('build')"
                 ng:show="!!currentBuild">
-              <a ng-click="selectTab('build-details')" href="#">Build
-                details (#{{currentBuild.id}})</a></li>
+              <a ng-click="selectTab('build')" href="#/project/{{currentProject.id}}/build/{{currentBuild.id}}">Build details (#{{currentBuild.id}})</a></li>
           </ul>
           <div class="details" ng:show="tab == 'details'">
             <ul>
@@ -73,7 +72,7 @@
               </tr>
             </table>
           </div>
-          <div class="build-details" ng:show="tab == 'build-details'">
+          <div class="build" ng:show="tab == 'build'">
             <ul>
               <li ng-repeat="key in ['title','branch','revision','author','start','stop','status','exit','tags']">
                 {{key}}: {{currentBuild[key]}}
