--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -30,58 +30,64 @@
         </div>
 
         <div class="span9">
-          <h3>Project "{{currentProject.name}}"</h3>
-          <ul class="nav nav-tabs">
-            <li ng:class="getTabClass('details')">
-              <a ng-click="selectTab('details')" href="#/project/{{currentProject.id}}/details">Details</a></li>
-            <li ng:class="getTabClass('builds')">
-              <a ng-click="selectTab('builds')" href="#/project/{{currentProject.id}}/builds">Builds</a></li>
-            <li ng:class="getTabClass('build')"
-                ng:show="!!currentBuild">
-              <a ng-click="selectTab('build')" href="#/project/{{currentProject.id}}/build/{{currentBuild.id}}">Build details (#{{currentBuild.id}})</a></li>
-          </ul>
-          <div class="details" ng:show="tab == 'details'">
-            <ul>
-              <li>
-                Local: <span>{{currentProject.local}}</span>
-              </li>
-              <li>
-                Remote: <span>{{currentProject.remote}}</span>
-              </li>
-              <li>
-                Build: <span>{{currentProject.build}}</span>
-              </li>
-              <li>
-                Notifications: <span>{{currentProject.notifications}}</span>
-              </li>
-            </ul>
+          <div id="hello" ng:show="!currentProject">
+            <h1>Hello!</h1>
+            <p>Select a project on the left!</p>
           </div>
-          <div class="builds" ng-controller="BuildCtrl" ng:show="tab == 'builds'">
-            <h5>Total builds: {{getTotalBuilds()}}</h5>
-            <table class="table table-condensed">
-              <tr ng-repeat="build in builds | orderBy:predicate:true"
-                  class="build-{{build.status}} build-row"
-                  ng-click="showBuildDetails(build)">
-                <td ng-repeat="key in ['id', 'status', 'branch', 'title', 'author', 'start', 'stop']">
-                  {{build[key]}}
-                </td>
-                <td>
-                  <button class="btn" ng-click="rerun(build, $event)"><i class="icon-play"></i>Rerun</button>
-                  <button class="btn" ng-click="delete(build, $event)"><i class="icon-trash"></i>Delete</button>
-                </td>
-              </tr>
-            </table>
-          </div>
-          <div class="build" ng:show="tab == 'build'">
-            <ul>
-              <li ng-repeat="key in ['title','branch','revision','author','start','stop','status','exit','tags']">
-                {{key}}: {{currentBuild[key]}}
-              </li>
-              <li>
-                Build output:
-                <pre>{{currentBuild.output}}</pre>
-              </li>
+          <div id="project" ng:show="!!currentProject">
+            <h3>Project "{{currentProject.name}}"</h3>
+            <ul class="nav nav-tabs">
+              <li ng:class="getTabClass('details')">
+                <a ng-click="selectTab('details')" href="#/project/{{currentProject.id}}/details">Details</a></li>
+              <li ng:class="getTabClass('builds')">
+                <a ng-click="selectTab('builds')" href="#/project/{{currentProject.id}}/builds">Builds</a></li>
+              <li ng:class="getTabClass('build')"
+                  ng:show="!!currentBuild">
+                <a ng-click="selectTab('build')" href="#/project/{{currentProject.id}}/build/{{currentBuild.id}}">Build details (#{{currentBuild.id}})</a></li>
             </ul>
+            <div class="details" ng:show="tab == 'details'">
+              <ul>
+                <li>
+                  Local: <span>{{currentProject.local}}</span>
+                </li>
+                <li>
+                  Remote: <span>{{currentProject.remote}}</span>
+                </li>
+                <li>
+                  Build: <span>{{currentProject.build}}</span>
+                </li>
+                <li>
+                  Notifications: <span>{{currentProject.notifications}}</span>
+                </li>
+              </ul>
+            </div>
+            <div class="builds" ng-controller="BuildCtrl" ng:show="tab == 'builds'">
+              <h5>Total builds: {{getTotalBuilds()}}</h5>
+              <table class="table table-condensed">
+                <tr ng-repeat="build in builds | orderBy:predicate:true"
+                    class="build-{{build.status}} build-row"
+                    ng-click="showBuildDetails(build)">
+                  <td ng-repeat="key in ['id', 'status', 'branch', 'title', 'author', 'start', 'stop']">
+                    {{build[key]}}
+                  </td>
+                  <td>
+                    <button class="btn" ng-click="rerun(build, $event)"><i class="icon-play"></i>Rerun</button></br>
+                    <button class="btn" ng-click="delete(build, $event)"><i class="icon-trash"></i>Delete</button>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <div class="build" ng:show="tab == 'build'">
+              <ul>
+                <li ng-repeat="key in ['title','branch','revision','author','start','stop','status','exit','tags']">
+                  {{key}}: {{currentBuild[key]}}
+                </li>
+                <li>
+                  Build output:
+                  <pre>{{currentBuild.output}}</pre>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
