--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -82,6 +82,7 @@
               </div>
             </div>
             <div class="builds" ng-controller="BuildCtrl" ng:show="tab == 'builds'">
+              <input ng-model="branch"></input><button class="btn" ng-click="run(branch)"><i class="icon-play"></i>Build!</button></br>
               <h5>Total builds: {{getTotalBuilds()}}</h5>
               <table class="table table-condensed">
                 <tr ng-repeat="build in builds | orderBy:predicate:true"
@@ -91,7 +92,7 @@
                     {{build[key]}}
                   </td>
                   <td>
-                    <button class="btn" ng-click="rerun(build, $event)"><i class="icon-play"></i>Rerun</button></br>
+                    <button class="btn" ng-click="rerun(build, $event)"><i class="icon-forward"></i>Rerun</button></br>
                     <button class="btn" ng-click="delete(build, $event)"><i class="icon-trash"></i>Delete</button>
                   </td>
                 </tr>
