--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -85,14 +85,14 @@
               <input ng-model="branch"></input><button class="btn" ng-click="run(branch)"><i class="icon-play"></i>Build!</button></br>
               <h5>Total builds: {{getTotalBuilds()}}</h5>
               <table class="table table-condensed">
-                <tr ng-repeat="build in builds | orderBy:predicate:true"
+                <tr ng-repeat="build in values(builds) | orderBy:predicate:true"
                     class="build-{{build.status}} build-row"
                     ng-click="showBuildDetails(build)">
                   <td ng-repeat="key in ['id', 'status', 'branch', 'title', 'author', 'start', 'stop']">
                     {{build[key]}}
                   </td>
-                  <td>
-                    <button class="btn" ng-click="rerun(build, $event)"><i class="icon-forward"></i>Rerun</button></br>
+                  <td class="btns">
+                    <button class="btn" ng-click="rerun(build, $event)"><i class="icon-forward"></i>Rerun</button><br/>
                     <button class="btn" ng-click="delete(build, $event)"><i class="icon-trash"></i>Delete</button>
                   </td>
                 </tr>
