--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -5,6 +5,7 @@
     <script src="http://code.angularjs.org/1.0.1/angular-resource-1.0.1.js"></script>
     <script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
     <script src="js/app.js"></script>
+    <link href="/img/favicon.png" type="image/x-icon" rel="icon">
     <link type="text/css" rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/css/bootstrap-combined.min.css">
     <link type="text/css" rel="stylesheet" href="/css/kha.css">
   </head>
