implement Load more build list "paging"

--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -98,6 +98,7 @@
                   </td>
                 </tr>
               </table>
+              <button ng-click="loadMore()" class="btn-large">Load more</button>
             </div>
             <div class="build" ng:show="tab == 'build'">
               <ul>
