--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -4,7 +4,9 @@
     <script src="/lib/angular-1.0.1.js"></script>
     <script src="/lib/angular-resource-1.0.1.js"></script>
     <script src="/lib/underscore-min.js"></script>
+    <script src="/lib/http-auth-interceptor.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/login.js"></script>
     <link href="/img/favicon.png" type="image/x-icon" rel="icon">
     <link type="text/css" rel="stylesheet" href="lib/bootstrap-combined.min.css">
     <link type="text/css" rel="stylesheet" href="/css/kha.css">
@@ -31,7 +33,6 @@
             <a ng-click="addProject()">Add project</a>
           </div>
         </div>
-
         <div class="span9">
           <div id="hello" ng:show="!currentProject">
             <h1>Hello!</h1>
@@ -147,6 +148,14 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div id="login-container">
+      <form name="login" class="navbar-form pull-left" ng-controller="LoginController">
+        <input type="text" class="span2" ng-model="email" placeholder="Email" required></input>
+        <input type="password" class="span2" ng-model="password" placeholder="Password" required></input>
+        <button class="btn" ng-click="submit($event)" ng-disabled="!login.$valid"><i class="icon-user"></i>Login</button>
+      </form>
     </div>
 
     <div id="github"><a title="Fork me on GitHub" href="https://github.com/greenelephantlabs/kha">Fork me on GitHub</a></div>
