add missing title

--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html ng-app="Kha">
   <head>
+    <title>Kha - lightweight CI server</title>
     <script src="/lib/angular-1.1.0.js"></script>
     <script src="/lib/angular-resource-1.1.0.js"></script>
     <script src="/lib/underscore-min.js"></script>
