--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -146,7 +146,7 @@
                 </li>
                 <li>
                   Build output:
-                  <pre>{{currentBuild.output}}</pre>
+                  <pre class="build-output">{{currentBuild.output}}</pre>
                 </li>
               </ul>
             </div>
