logo is link to home

--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -17,8 +17,10 @@
       <div class="row-fluid" ng-controller="ProjectCtrl">
         <div class="span3">
           <div id="logo">
-            <img src="/img/kha.png"/>
-            <h3>Kha - lightweight CI server</h3>
+            <a href="/index.html" id="home">
+              <img src="/img/kha.png"/>
+              <h3>Kha - lightweight CI server</h3>
+            </a>
           </div>
           <div id="projects">
             <h2>Projects</h2>
