--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -130,12 +130,13 @@
                 <tr ng-repeat="build in values(builds) | orderBy:predicate:true"
                     class="build-{{build.status}} build-row"
                     ng-click="showBuildDetails(build)">
-                  <td ng-repeat="key in ['id', 'status', 'branch', 'title', 'author', 'start', 'stop']">
+                  <td ng-repeat="key in ['id', 'status', 'branch', 'title', 'author', 'create', 'start', 'stop']">
                     {{build[key]}}
                   </td>
                   <td class="btns">
                     <button class="btn" ng-click="rerun(build, $event)"><i class="icon-forward"></i>Rerun</button><br/>
                     <button class="btn" ng-click="delete(build, $event)"><i class="icon-trash"></i>Delete</button>
+                    <button class="btn" ng-click="stop(build, $event)"><i class="icon-stop"></i>  Stop</button>
                   </td>
                 </tr>
               </table>
